# stm32

./: .gitmodules  README.md
f4/: CMakeLists.txt  FreeRTOS.cmake  README.md  STM32CubeF4.cmake  arm.toolchain  elf2.txt  ex_dump.txt  upload.sh
f4/Core/Config/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_config.h  system.c
f4/Core/Inc/: gpio_defs.h  main.h  tim_defs.h  usr_tasks.h
f4/Core/Src/: gpio.c  it.c  main.c  msp.c  tim.c  usr_tasks.c
f4_blink/: CMakeLists.txt  README.md  STM32CubeF4.cmake  arm.toolchain
f4_blink/Core/Config/: FLASH.ld  startup_stm32f446xx.s  stm32f4xx_hal_conf.h
f4_blink/Core/Inc/: it.h  main.h  pin_cfg.h
f4_blink/Core/Src/: gpio.c  main.c
f4_rtos/: README.md
f4_rtos/Core/Config/: FreeRTOSConfig.h
f4_rtos/Core/Inc/: main.h
f4_rtos/Core/Src/: main.c
